--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = pyxp-mattlink
+name = pyrexpaint
 version = 0.0.1
 author = Matt Link
-author_email = author@example.com
-description = A small REXPaint .xp file loader
+author_email = mattlink
+description = A small loader for REXPaint .xp files.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/mattlink/pyxp
+url = https://github.com/mattlink/pyrexpaint
 project_urls =
-    Bug Tracker = https://github.com/mattlink/pyxp/issues
+    Bug Tracker = https://github.com/mattlink/pyrexpaint/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: GPL
