--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,7 @@
 name = pyrexpaint
 version = 0.0.1
 author = Matt Link
-author_email = mattlink
-description = A small loader for REXPaint .xp files.
+description = A small library for loading REXPaint .xp files.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/mattlink/pyrexpaint
@@ -11,7 +10,7 @@ project_urls =
     Bug Tracker = https://github.com/mattlink/pyrexpaint/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: GPL
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
 
 [options]
