--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ project_urls =
     Bug Tracker = https://github.com/mattlink/pyrexpaint/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
 
 [options]
